egress/http/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-rest
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: rest
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 443
        tls:
          mode: ISTIO_MUTUAL
          sni: minishift.host
