egress/http/ServiceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rest-app
spec:
  hosts:
  - minishift.host
  ports:
  - number: 8081
    name: http
    protocol: HTTP
  resolution: DNS
