egress/http/ServiceEntry_STATIC_IP.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: rest-app
spec:
  hosts:
  - minishift.host
  ports:
  - number: 8081
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.122.1
