egress/http/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rest-through-egress-gateway
spec:
  hosts:
  - minishift.host
  gateways:
  - istio-egressgateway-http
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 8081
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: rest
        port:
          number: 443
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway-http
      port: 443
    route:
    - destination:
        host: minishift.host
        port:
          number: 8081
      weight: 100
